force-app/main/default/objects/Knowledge__kav/fields/Internal_Facing_Content__c.field-meta.xml
<CustomField>
    <fullName>Internal_Facing_Content__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Internal Facing Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>