force-app/main/default/objects/Knowledge__kav/fields/Labels__c.field-meta.xml
<CustomField>
    <fullName>Labels__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Additional synonyms or words to be used in searching</inlineHelpText>
    <label>Labels</label>
    <type>TextArea</type>
</CustomField>