force-app/main/default/objects/Knowledge__kav/fields/Portal_Answer__c.field-meta.xml
<CustomField>
    <fullName>Portal_Answer__c</fullName>
    <description>Summary + Link for the Portal Bot Answer</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Portal Answer</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>