force-app/main/default/objects/Knowledge__kav/fields/Publish_Date__c.field-meta.xml
<CustomField>
    <fullName>Publish_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Publish Date</label>
    <type>Date</type>
</CustomField>