force-app/main/default/objects/Knowledge__kav/fields/SME__c.field-meta.xml
<CustomField>
    <fullName>SME__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SME</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Knowledge</relationshipName>
    <type>Lookup</type>
</CustomField>