force-app/main/default/objects/Knowledge__kav/fields/Video_URL__c.field-meta.xml
<CustomField>
    <fullName>Video_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Video URL</label>
    <type>Url</type>
</CustomField>